crates/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests/snapshots/header_parsing_tests__header_date.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests.rs
expression: result
---
Ok(
    Date {
        date: Valid(
            CheckedChatDate {
                day: 29,
                month: Feb,
                year: 1996,
                raw: "29-FEB-1996",
            },
        ),
    },
)
