crates/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests/snapshots/header_parsing_tests__header_id_complex.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests.rs
expression: result
---
Ok(
    ID(
        IDHeader {
            language: LanguageCodes(
                [
                    LanguageCode(
                        "eng",
                    ),
                ],
            ),
            corpus: CorpusName(
                "bates",
            ),
            speaker: SpeakerCode(
                "CHI",
            ),
            age: Some(
                Valid {
                    years: 1,
                    months: Some(
                        8,
                    ),
                    days: None,
                    raw: "1;08.",
                },
            ),
            sex: Some(
                Female,
            ),
            group: Some(
                GroupName(
                    "normal",
                ),
            ),
            ses: None,
            role: ParticipantRole(
                "Child",
            ),
            education: None,
            custom_field: None,
        },
    ),
)
