crates/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests/snapshots/header_parsing_tests__header_media.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests.rs
assertion_line: 172
expression: result
---
Ok(
    Media(
        MediaHeader {
            filename: MediaFilename(
                "media-file",
            ),
            media_type: Video,
            status: None,
            whitespace_before_comma: None,
        },
    ),
)
